--- a/package.json
+++ b/package.json
@@ -9,10 +9,24 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "babel-install": "^2.1.0",
     "browser-sync": "^2.23.5",
     "gulp": "^3.9.1",
     "gulp-autoprefixer": "^4.1.0",
     "gulp-sass": "^3.1.0",
     "gulp-sourcemaps": "^2.6.3"
-  }
+  },
+  "devDependencies": {
+    "babel-core": "^6.26.0",
+    "babel-loader": "^7.1.2",
+    "babel-preset-es2015": "^6.24.1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/karminkarmen/DrawIt---drawing-application.git"
+  },
+  "bugs": {
+    "url": "https://github.com/karminkarmen/DrawIt---drawing-application/issues"
+  },
+  "homepage": "https://github.com/karminkarmen/DrawIt---drawing-application#readme"
 }
